# mini-shell

./: .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  [WIP]echo.c  cat  cat.c  cat.h  chgrp.c  chgrp.h  chgrp_main.c  chmod  chmod.c  chmod.h  chmod_main.c  chown.c  chown.h  chown_main.c  clear  clear.c  clear.h  clear_main.c  cmake_install.cmake  cp.c  cp.h  cp_main.c  du.c  du.h  du_main.c  echo.c  echo.h  fonction.c  fonction.h  less.c  less.h  ls.c  ls.h  main.c  mkdir.c  (+40 more)
doc/html/: annotated.html  cat_8h.html  cat_8h__incl.dot  cat_8h__incl.md5  cat_8h_source.html  cd_8h.html  cd_8h__incl.dot  cd_8h__incl.md5  cd_8h_source.html  classes.html  commands_8h.html  commands_8h__dep__incl.dot  commands_8h__dep__incl.md5  commands_8h__incl.dot  commands_8h__incl.md5  commands_8h_source.html  connect_8h.html  connect_8h__incl.dot  connect_8h__incl.md5  connect_8h_source.html  dir_000000_000001.html  dir_4d4c17f10dfc67a4e6c52aa126dbc0d5.html  dir_4d4c17f10dfc67a4e6c52aa126dbc0d5_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  echo_8h.html  echo_8h__incl.dot  echo_8h__incl.md5  echo_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  ls_8h.html  ls_8h__dep__incl.dot  ls_8h__dep__incl.md5  (+55 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  cat_8h.tex  cat_8h__incl.dot  cat_8h__incl.md5  cd_8h.tex  cd_8h__incl.dot  cd_8h__incl.md5  commands_8h.tex  commands_8h.tex.tmp  commands_8h__dep__incl.dot  commands_8h__dep__incl.md5  commands_8h__incl.dot  commands_8h__incl.md5  connect_8h.tex  connect_8h__incl.dot  connect_8h__incl.md5  dir_4d4c17f10dfc67a4e6c52aa126dbc0d5.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  echo_8h.tex  echo_8h__incl.dot  echo_8h__incl.md5  files.tex  ls_8h.tex  ls_8h__dep__incl.dot  ls_8h__dep__incl.md5  ls_8h__incl.dot  ls_8h__incl.md5  mkdir_8h.tex  mkdir_8h__incl.dot  mkdir_8h__incl.md5  mv_8h.tex  mv_8h__incl.dot  mv_8h__incl.md5  process_8h.tex  process_8h__incl.dot  process_8h__incl.md5  pwd_8h.tex  pwd_8h__dep__incl.dot  (+31 more)
include/: .commands.h.swp  cd.h  commands.h  parameters.def  process.h  redirection.h  server.h  shell.h  typedef.h  utils.h
include/commands/: cat.h  cd.h  chgrp.h  chmod.h  chown.h  clear.h  connect.h  cp.h  du.h  echo.h  ls.h  mkdir.h  more.h  mv.h  ps.h  pwd.h  rm.h  top.h
ls/: myls  myls.c  testDeFolie.c
mkdir/: myMkdir
shell/: myshell.c
src/: bogoprintf.c  cd.c  commands.c  ls.c  main.c  process.c  redirection.c  server.c  shell.c  utils.c
src/commands/: cat.c  cd.c  chgrp.c  chmod.c  chown.c  clear.c  colors.h  connect.c  cp.c  echo.c  ls.c  mkdir.c  more.c  mv.c  ps.c  rm.c
src/ls/: myls.c
src/main/: cat.c  cd.c  chgrp.c  chmod.c  chown.c  clear.c  connect.c  cp.c  du.c  echo.c  ls.c  mkdir.c  more.c  mv.c  ps.c  pwd.c  rm.c  top.c
src/mkdir/: myMkdir.c
